[package]
name = "pep-508"
version = "0.1.0"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = ""
documentation = "https://docs.rs/pep-508"
readme = "README.md"
homepage = "https://github.com/figsoda/pep-508"
repository = "https://github.com/figsoda/pep-508"
license = "MPL-2.0"
keywords = []
categories = []

[dependencies]
chumsky = "0.9.0"

[dev-dependencies]
insta = "1.28.0"
