[package]
name = "pep-508"
version = "0.3.0"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Python dependency parser for PEP 508"
documentation = "https://docs.rs/pep-508"
readme = "README.md"
homepage = "https://github.com/figsoda/pep-508"
repository = "https://github.com/figsoda/pep-508"
license = "MPL-2.0"
keywords = ["dependency", "parser", "pep508", "python", "requirements"]
categories = ["parser-implementations"]

[dependencies]
chumsky = ">=1.0.0-alpha.3"

[dev-dependencies]
insta = "1.28.0"
